// Copyright 2021 gRPC authors.

syntax = "proto3";

package fuzzing_event_engine;

message Actions {
  reserved 1;

  repeated uint64 run_delay = 2;

  repeated uint32 assign_ports = 3;

  repeated Connection connections = 4;

  repeated EndpointMetrics endpoint_metrics = 5;

  repeated ReturnedEndpointMetrics returned_endpoint_metrics = 6;
}

message Connection {
  repeated uint32 write_size = 1;
}

message EndpointMetrics {
  uint32 key = 1;
  string name = 2;
}

message ReturnedEndpointMetrics {
  uint32 write_id = 1;
  uint32 delay_us = 2;
  uint32 event = 3;
  repeated ReturnedEndpointMetric returned_endpoint_metrics = 4;
}

message ReturnedEndpointMetric {
  uint32 key = 1;
  int64 value = 2;
}
